add severity charts api
