# api/v2/restapi/operations/stored_alert/get_severity_chart_responses.go
@@ -1,0 +1,105 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package stored_alert
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/prometheus/alertmanager/api/v2/models"
+)
+
+// GetSeverityChartOKCode is the HTTP code returned for type GetSeverityChartOK
+const GetSeverityChartOKCode int = 200
+
+/*
+GetSeverityChartOK Get stored alerts response
+
+swagger:response getSeverityChartOK
+*/
+type GetSeverityChartOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload models.SeverityDays `json:"body,omitempty"`
+}
+
+// NewGetSeverityChartOK creates GetSeverityChartOK with default headers values
+func NewGetSeverityChartOK() *GetSeverityChartOK {
+
+	return &GetSeverityChartOK{}
+}
+
+// WithPayload adds the payload to the get severity chart o k response
+func (o *GetSeverityChartOK) WithPayload(payload models.SeverityDays) *GetSeverityChartOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get severity chart o k response
+func (o *GetSeverityChartOK) SetPayload(payload models.SeverityDays) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetSeverityChartOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	payload := o.Payload
+	if payload == nil {
+		// return empty array
+		payload = models.SeverityDays{}
+	}
+
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
+
+// GetSeverityChartInternalServerErrorCode is the HTTP code returned for type GetSeverityChartInternalServerError
+const GetSeverityChartInternalServerErrorCode int = 500
+
+/*
+GetSeverityChartInternalServerError Internal server error
+
+swagger:response getSeverityChartInternalServerError
+*/
+type GetSeverityChartInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload interface{} `json:"body,omitempty"`
+}
+
+// NewGetSeverityChartInternalServerError creates GetSeverityChartInternalServerError with default headers values
+func NewGetSeverityChartInternalServerError() *GetSeverityChartInternalServerError {
+
+	return &GetSeverityChartInternalServerError{}
+}
+
+// WithPayload adds the payload to the get severity chart internal server error response
+func (o *GetSeverityChartInternalServerError) WithPayload(payload interface{}) *GetSeverityChartInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get severity chart internal server error response
+func (o *GetSeverityChartInternalServerError) SetPayload(payload interface{}) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetSeverityChartInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	payload := o.Payload
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
